# TunierVerwarlungLegoSumo

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html
docs/: BAU-10-identitaet-authentifizierung-autorisierung-multiuser-grundlagen.md  BAU-13-queueing-job-orchestrierung-idempotente-verarbeitungsablaeufe.md  BAU-6-monorepo-struktur-standards-und-basis-dokumentation.md  BAU-7-docker-basis-und-laufzeitprofile-cachyos.md  BAU-8-zielarchitektur-und-skalierungsmodell.md  (+1 more)
scripts/: start-dev.sh  (+3 more)
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/app/: main.py
services/api-gateway/app/api/routes/: health.py  version.py
services/api-gateway/app/api/schemas/: common.py
services/api-gateway/app/application/commands/: get_version_command.py
services/api-gateway/app/application/services/: version_service.py
services/api-gateway/app/core/: errors.py  version.py
services/api-gateway/app/domain/services/: health_service.py
services/api-gateway/app/infrastructure/adapters/: database_adapter.py  model_adapter.py  queue_adapter.py  vector_search_adapter.py
services/api-gateway/tests/: test_core_endpoints.py
services/document-api/: README.md  pyproject.toml
services/document-api/app/: main.py
services/document-api/app/api/routes/: uploads.py
services/document-api/app/api/schemas/: upload.py
services/document-api/app/application/: dtos.py
services/document-api/app/application/services/: document_upload_service.py
services/document-api/app/core/: version.py
services/document-api/app/domain/ports/: queue.py  repositories.py  storage.py
services/document-api/app/infrastructure/persistence/migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql
services/document-api/app/infrastructure/persistence/repositories/: in_memory_document_repository.py  in_memory_job_repository.py  postgres_document_repository.py  postgres_job_repository.py
services/document-api/app/infrastructure/queue/: in_memory_ingestion_queue.py
services/document-api/app/infrastructure/storage/: local_file_storage.py
services/document-api/tests/: test_uploads.py
services/pdf-analysis-service/: Dockerfile  README.md  pyproject.toml
services/pdf-analysis-service/app/: main.py
services/pdf-analysis-service/app/api/: routes.py
services/pdf-analysis-service/app/core/: version.py
services/pdf-analysis-service/app/domain/: analyzer.py  schema.py
services/pdf-analysis-service/tests/: test_analyzer.py  test_api.py
services/search-api/: README.md  pyproject.toml
services/search-api/app/application/: hybrid_retrieval_service.py
services/search-api/app/domain/models/: retrieval.py
services/search-api/app/domain/ports/: retrieval_repository.py
services/search-api/app/infrastructure/repositories/: qdrant_retrieval_repository.py
services/search-api/tests/: test_hybrid_retrieval_service.py
(+21 files in other folders)
